--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,14 @@ body, html {
     border-radius: 5px;
     cursor: pointer;
   }
+
+  info {
+    width: 100%;
+    padding: 8px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    color: #D3D3D3
+  }
   
   button:hover {
     background-color: #0056b3;
