--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ body, html {
     border-radius: 5px;
     background-color: #f9f9f9;
   }
+
+  .space {
+    height: 30px;
+  }
   
   h1, h2 {
     text-align: center;
